fixed extracting text of a node.