@@ -6,12 +6,26 @@ import org.treesitter.TSTree;
 import org.treesitter.TSNode;
 import org.treesitter.TSPoint;
 import org.treesitter.TreeSitterMatlab;
+import org.treesitter.TSInputEncoding;
+import org.treesitter.TSReader;
 import java.io.IOException;
+import java.io.BufferedReader;
 import java.io.File;
+import java.io.FileInputStream;
+import java.nio.ByteBuffer;
+import java.nio.CharBuffer;
+import java.nio.charset.Charset;
+import java.nio.charset.CharsetDecoder;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.Arrays;
+import java.io.InputStreamReader;
+import java.io.InputStream;
+import java.io.FileInputStream;
 import io.usethesource.capsule.Map;
 import io.usethesource.vallang.IValue;
 import io.usethesource.vallang.IValueFactory;
@@ -29,7 +43,7 @@ public class Parser {
         this.values = values;
     }
 
-   public INode runParser() {
+   public IList runParser() {
         TSParser parser = new TSParser();
         // Use `TSLanguage.load` instead if you would like to load parsers as shared object(.so, .dylib, or .dll).
         // TSLanguage.load("path/to/languane/shared/object", "tree_sitter_some_lang");
@@ -39,22 +53,25 @@ public class Parser {
         ArrayList<Path> filesInDirList = getMatlabFiles("src/main/resources/exampleFiles");
         Path[] filesInDir = filesInDirList.toArray(new Path[filesInDirList.size()]);
         TSTree[] asts = new TSTree[filesInDir.length];
-        List<String[]> strs = new ArrayList<String[]>();
+        String[] strs = new String[filesInDir.length];
         String[] locs = new String[filesInDir.length];
+        System.out.println(filesInDir.length);
         if(filesInDir != null) {
             for(int i = 0; i < filesInDir.length; i++) {
+                String pathString = filesInDir[i].toString();
                 Path path = filesInDir[i];
-                locs[i] = filesInDir[i].toString();
+                locs[i] = pathString;
+                byte[] b = new byte[0];
                 String str = "";
                 try {
-                    str = Files.readString(path) + "\n";
-                    List<String> lines = Files.readAllLines(filesInDir[i]);
-                    strs.add(lines.toArray(new String[lines.size()]));
+                    b = Files.readAllBytes(path);
+                    // Output decoded content
+                    str = new String(b, StandardCharsets.UTF_8);
                 } catch (IOException e) {
-                    System.out.println(path);
                     e.printStackTrace();
                 }
                 asts[i] = parser.parseString(null, str);
+                strs[i] = str;
             }
         }
         /*for(int i = 0; i < asts.length; i++) {
@@ -105,18 +122,15 @@ public class Parser {
         System.out.println(string);*/
         INode[] trees = new INode[asts.length];
         for(int i = 0; i < asts.length; i++) {
-            trees[i] = convertToNode(asts[i].getRootNode(), strs.get(i), locs[i]);
+            trees[i] = convertToNode(asts[i].getRootNode(), strs[i], locs[i]);
         }
         System.out.println(asts[0].getRootNode());
         System.out.println(asts.length);
-        return trees[0];
+        return values.list(trees);
     }
 
-    public INode convertToNode(TSNode node, String[] code, String location) {
+    public INode convertToNode(TSNode node, String code, String location) {
         String type = node.getType();
-        if(node.isError()) {
-            System.out.println("Error in: " + location + " at startpoint: " + " x: " + node.getStartPoint().getRow() + " y: " + node.getStartPoint().getColumn() + " endpoint: " + " x: " + node.getEndPoint().getRow() + " y: " + node.getEndPoint().getColumn());
-        }
         int childCount = node.getChildCount();
         ArrayList<IValue> children = new ArrayList<IValue>();
         TSPoint startPoint = node.getStartPoint();
@@ -139,9 +153,10 @@ public class Parser {
                 children.add(convertedChild);
             }
         }
-        if(type.equals("identifier") || type.equals("comment")) {
-            children.add(values.list(getCodeText(node.getStartPoint(), node.getEndPoint(), code)));
-        }
+        //if(type.equals("identifier") || type.equals("comment")) {
+            byte[] bytes = code.getBytes(StandardCharsets.UTF_8);
+            children.add(values.string(new String(Arrays.copyOfRange(bytes, node.getStartByte(), node.getEndByte()), StandardCharsets.UTF_8)));
+        //}
         //System.out.println(fields);
         INode nodeWithoutFields = values.node(type, children.toArray(new IValue[children.size()]));
         return new NodeWithKeywordParametersFacade(nodeWithoutFields, fields);
@@ -170,9 +185,9 @@ public class Parser {
         int startColumn = startPoint.getColumn();
         int endLine = endPoint.getRow();
         int endColumn = endPoint.getColumn();
-        if(endColumn + 1 > code[endLine].length()) {
+        /*if(endColumn + 1 > code[endLine].length()) {
             endColumn = code[endLine].length() - 1;
-        }
+        }*/
         if (startLine == endLine) {
             IString[] result = new IString[1];
             result[0] = values.string(code[startLine].substring(startColumn, endColumn));
